# Aura

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml  ci_windows_clang.yml
Source/: Aura.cpp
Source/Core/: Address.hpp  BitCast.hpp  Concat.hpp  Forward.hpp  Move.hpp  NullPointer.hpp  Safety.hpp  Stringify.hpp  Todo.hpp  Unicode.hpp  Unimplemented.hpp  Unreachable.hpp
Source/Meta/: Conditional.hpp  RemoveLvalueReference.hpp  RemoveReferences.hpp
Source/Trait/: BoundedArray.hpp  Constant.hpp  CopyConstructible.hpp  DefaultConstructible.hpp  Derived.hpp  Destructible.hpp  Function.hpp  MoveConstructible.hpp  Reference.hpp  Same.hpp  Sized.hpp  TriviallyCopyConstructible.hpp  TriviallyCopyable.hpp  TriviallyDefaultConstructible.hpp  TriviallyDestructible.hpp  TriviallyMoveConstructible.hpp  UnsafelyConstructible.hpp
Test/Core/: Address.cpp  BitCast.cpp  Concat.cpp  Forward.cpp  Move.cpp  NullPointer.cpp  Safety.cpp  Stringify.cpp  Todo.cpp  Unicode.cpp  Unimplemented.cpp  Unreachable.cpp
Test/Meta/: Conditional.cpp  RemoveLvalueReference.cpp  RemoveReferences.cpp
Test/Trait/: BoundedArray.cpp  Constant.cpp  CopyConstructible.cpp  DefaultConstructible.cpp  Derived.cpp  Destructible.cpp  Function.cpp  MoveConstructible.cpp  Reference.cpp  Same.cpp  Sized.cpp  TriviallyCopyConstructible.cpp  TriviallyCopyable.cpp  TriviallyDefaultConstructible.cpp  TriviallyDestructible.cpp  TriviallyMoveConstructible.cpp  UnsafelyConstructible.cpp
TestFail/Core/: Unreachable.cpp
